--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <meta property="og:image:height" content="128" /> 
     <link rel="shortcut icon" href="//ftsl.org.br/favicon.ico" type="image/vnd.microsoft.icon" />
 <link rel="icon" type="image/x-icon" href="http://ftsl.org.br/favicon.ico">
-    <title>{{ page.title }} - XI Fórum de Tecnologia em Software Livre</title>
+    <title>{{ page.title }} - XI Fórum de Tecnologia em Software Livre e Aberto de Curitiba</title>
 
     <!-- CSS  -->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
